#4798: Fixed wrapping selected filters on search page

--- a/view/frontend/web/core/wizzySearch.scss
+++ b/view/frontend/web/core/wizzySearch.scss
@@ -1028,7 +1028,7 @@
            padding: 0;
            list-style: none;
            display: flex;
-           padding-bottom: 15px;
+           flex-wrap: wrap;
 
            li.wizzy-selected-facet-list-item {
              margin: 0;
@@ -1040,6 +1040,7 @@
              font-size: 13px;
              margin-right: 15px;
              border-radius: 30px;
+             margin-bottom: 15px;
 
              span.wizzy-selected-facet-delete:after {
                content: "\2715";
